[package]
edition = "2024"
license = "AGPL-3.0-or-later"
name = "emojipicker"
version = "0.1.0"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", default-features = false, features = ["image"] }
emojis = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
twemoji-assets = { version = "1", default-features = false, features = ["png"] }
